crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__threads__I102-top-flow-terminator-should-not-kill-thread-choices.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/threads/I102-top-flow-terminator-should-not-kill-thread-choices
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "Limes\n" [Choices: "boop" (0) -> 0]
> "boop\n" [Ended]
outcome: Ended
