crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__threads__thread-bug-v1.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/threads/thread-bug-v1
oracle: 21, brink: 21, matched: 21
passing: 21/21

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
outcome: InputsExhausted

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended

=== episode [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1] === PASS
> "Here is some gold. Do you want it?\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 0]
> "No\n" [Continue]
> "Try again!\n" [Choices: "No" (0), "Yes" (1) -> 1]
> "Yes\n" [Continue]
> "You win!\n" [Ended]
outcome: Ended
